--- a/style.scss
+++ b/style.scss
@@ -1564,7 +1564,7 @@ body{
   .work-container{
     flex-direction: column-reverse;
     .cards{
-      margin: 0;
+      margin: 0 auto;
     }
     .my-work{
       margin-top: 30px;
