--- a/style.css
+++ b/style.css
@@ -2321,6 +2321,22 @@ body {
     transform: translateY(0);
   }
 }
+@-webkit-keyframes volume {
+  0% {
+    height: 5px;
+  }
+  100% {
+    height: 25px;
+  }
+}
+@keyframes volume {
+  0% {
+    height: 5px;
+  }
+  100% {
+    height: 25px;
+  }
+}
 @-webkit-keyframes rotate {
   from {
     transform: rotate(0deg);
@@ -2642,7 +2658,7 @@ body {
   transition: all 0.15s ease-out;
 }
 .music-list.show {
-  top: 40%;
+  bottom: 0%;
   opacity: 1;
   pointer-events: auto;
 }
@@ -2697,5 +2713,75 @@ body {
 }
 .music-list ul li.playing {
   pointer-events: none;
+}
+
+.wrapper .playing-anim {
+  width: 25px;
+  height: 1px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-end;
+  gap: 2px;
+}
+.wrapper .playing-anim .bar__1 {
+  width: 5px;
+  height: 100%;
+  background-color: var(--accent-color);
+}
+.wrapper .playing-anim .bar__2 {
+  width: 5px;
+  height: 100%;
+  background-color: var(--accent-color);
+}
+.wrapper .playing-anim .bar__3 {
+  width: 5px;
+  height: 100%;
+  background-color: var(--accent-color);
+}
+.wrapper .playing-anim .bar__4 {
+  width: 5px;
+  height: 100%;
+  background-color: var(--accent-color);
+}
+
+.wrapper.paused .playing-anim .bar__1 {
+  width: 5px;
+  height: 100%;
+  -webkit-animation: volume 0.3s linear infinite alternate;
+          animation: volume 0.3s linear infinite alternate;
+}
+.wrapper.paused .playing-anim .bar__2 {
+  width: 5px;
+  height: 100%;
+  -webkit-animation: volume 0.3s linear infinite alternate;
+          animation: volume 0.3s linear infinite alternate;
+}
+.wrapper.paused .playing-anim .bar__3 {
+  width: 5px;
+  height: 100%;
+  -webkit-animation: volume 0.3s linear infinite alternate;
+          animation: volume 0.3s linear infinite alternate;
+}
+.wrapper.paused .playing-anim .bar__4 {
+  width: 5px;
+  height: 100%;
+  -webkit-animation: volume 0.3s linear infinite alternate;
+          animation: volume 0.3s linear infinite alternate;
+}
+.wrapper.paused .playing-anim .bar__1 {
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s;
+}
+.wrapper.paused .playing-anim .bar__2 {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s;
+}
+.wrapper.paused .playing-anim .bar__3 {
+  -webkit-animation-delay: 0.9s;
+          animation-delay: 0.9s;
+}
+.wrapper.paused .playing-anim .bar__4 {
+  -webkit-animation-delay: 0.6s;
+          animation-delay: 0.6s;
 }
 /*# sourceMappingURL=style.css.map */
