--- a/style.css
+++ b/style.css
@@ -2456,7 +2456,6 @@ body {
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  filter: grayscale(100%);
 }
 .wrapper.minimalized .song-details {
   opacity: 0;
@@ -2572,8 +2571,8 @@ body {
 .img-area img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  -o-object-fit: scale-down;
+     object-fit: scale-down;
 }
 
 .song-details {
