--- a/style.scss
+++ b/style.scss
@@ -2298,7 +2298,6 @@ body{
           width: 100%;
           height: 100%;
           object-fit: cover;
-          filter: grayscale(100%);
         }
       }
       .song-details{
@@ -2415,7 +2414,8 @@ body{
     img{
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      // object-fit: fill;
+      object-fit: scale-down;
     }
   } 
   .song-details{
