--- a/style.css
+++ b/style.css
@@ -143,12 +143,10 @@ body {
   width: 12px;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
   background-color: var(--scrollbar-track-color);
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
   background-color: var(--scrollbar-color);
   border-radius: 4px;
@@ -156,7 +154,6 @@ body {
   transition: 200ms all linear;
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background-color: var(--scrollbar-color-hover);
   -webkit-transition: 200ms all linear;
@@ -2454,8 +2451,8 @@ body {
 .wrapper.minimalized .img-area img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  -o-object-fit: scale-down;
+     object-fit: scale-down;
 }
 .wrapper.minimalized .song-details {
   opacity: 0;
