--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@
   font-size: 18px;
   font-family: "Poppins", sans-serif;
   scroll-margin-top: 140px;
-  transition: 200ms ease-in-out;
 }
 
 body {
@@ -561,6 +560,9 @@ body {
   position: relative;
   z-index: 1;
 }
+.page .slide-in * {
+  transition: 300ms ease-in-out;
+}
 .page .slide-in .slide {
   width: min(100% - 2rem, 70rem);
   opacity: 0;
@@ -759,6 +761,7 @@ body {
   flex-wrap: wrap;
   max-height: 600px;
   overflow-y: auto;
+  transition: 200ms ease-in-out;
 }
 .work-container .cards.grid-view .list-item {
   display: none;
@@ -2396,6 +2399,9 @@ body {
   border-radius: 15px;
   background: var(--elem-color);
   box-shadow: 0px 0px 15px var(--shadow-color);
+}
+.wrapper * {
+  transition: 300ms ease-in-out;
 }
 .wrapper.minimalized {
   height: 80px;
