--- a/style.scss
+++ b/style.scss
@@ -21,7 +21,6 @@
     font-size: 18px;
     font-family: 'Poppins', sans-serif;
     scroll-margin-top: 140px;
-    transition: 200ms ease-in-out;
 }
 body{
     height: 200vh;
@@ -548,6 +547,9 @@ body{
   .slide-in{
     position: relative;
     z-index: 1;
+    *{
+      transition: 300ms ease-in-out;
+    }
     .slide{
       width: MIN(100% - 2rem, 70rem);
       opacity: 0;
@@ -743,6 +745,7 @@ body{
     flex-wrap: wrap;
     max-height: 600px;
     overflow-y: auto;
+    transition: 200ms ease-in-out;
     &.grid-view{
       .list-item{
         display: none;
@@ -2209,7 +2212,9 @@ body{
     border-radius: 15px;
     background: var(--elem-color);
     box-shadow: 0px 0px 15px var(--shadow-color);
-  
+    *{
+      transition: 300ms ease-in-out;
+    }
     &.minimalized{
       height: 80px;
       width: 80px;
