--- a/style.css
+++ b/style.css
@@ -368,7 +368,7 @@ body {
   border-radius: 8px;
   box-shadow: 0px 0px 10px rgba(20, 20, 20, 0.7);
   overflow-y: scroll;
-  transition: 300ms right linear;
+  transition: 400ms right linear;
   right: -550px;
   z-index: 100;
   padding-bottom: 20px;
@@ -473,7 +473,7 @@ body {
 }
 
 .show {
-  transition: 400ms right cubic-bezier(0.42, 0, 0.11, 1.32);
+  transition: 500ms right cubic-bezier(0.42, 0, 0.11, 1.32);
   right: 10px;
   z-index: 10;
 }
@@ -684,8 +684,7 @@ body {
       scroll-snap-type: inline mandatory;
   scroll-padding-inline: 1rem;
 }
-
-.snaps-inline > * {
+.snaps-inline * {
   scroll-snap-align: start;
 }
 
@@ -1629,15 +1628,15 @@ body {
   }
   body .dropdown-content {
     margin: 0 auto;
-    top: 2000px;
+    top: 100%;
     height: 500px;
     z-index: 100;
     right: 1em;
     left: 1em;
-    transition: 800ms all linear;
+    transition: 300ms all ease-in-out;
   }
   body .show {
-    transition: 600ms top cubic-bezier(0.42, 0, 0.11, 1.32);
+    transition: 500ms top cubic-bezier(0.42, 0, 0.11, 1.32);
     top: calc(100% - 580px);
     z-index: 1000;
   }
