--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 :root{
     --primary: #2e2e2e;
@@ -31,7 +30,7 @@ body{
   color: var(--primary);
   background: var(--accent-color);
 }
-.preload{
+.preload{                                   // preload
   display: flex;
   opacity: 1;
   justify-content: center;
@@ -47,20 +46,20 @@ body{
     height: 100%;
     display: flex;
     flex-direction: row;
-     .left-side{
+     .left-side{              // left door
        background-color: var(--elem-color);
       height: 100%;
       width: 50%;
        border-top: 1px solid var(--accent-color);
     }
-     .right-side{
+     .right-side{       // right dor
        background-color: var(--elem-color);
       height: 100%;
       width: 50%;
       border-top: 1px solid var(--accent-color);
     }
   }
-  .circle{
+  .circle{            // preloading circles
     &__one{
       width: 200px;
       height: 200px;
@@ -129,7 +128,7 @@ body{
     }
   }
 }
-::-webkit-scrollbar {
+::-webkit-scrollbar {                         // scrollbars styling
     width: 12px;
   }
   ::-webkit-scrollbar-track {
@@ -144,7 +143,7 @@ body{
     background-color: var(--scrollbar-color-hover); 
     transition: 200ms all linear;
   }
-.navbar{
+.navbar{                                    // top navbar
     width: 100%;
     height: 80px;
     bottom: calc(100% - 80px);
@@ -179,7 +178,6 @@ body{
     }
     .nav-items{
         display: flex;
-        
         .nav-item{    
             position: relative;
             padding: 15px;
@@ -226,7 +224,7 @@ body{
                 }
             }
         }
-        .last{
+        .last{                          // themes button
             transition: all 300ms ease-in;
             position: relative;
             width: 50px;
@@ -264,7 +262,7 @@ body{
         font-size: 1.5em;
         letter-spacing: 6px;
     }
-    .wrapper-menu {
+    .wrapper-menu {                   // side menu icon
       width: 35px;
       height: 35px;
       display: none;
@@ -275,42 +273,34 @@ body{
       }
     }
     .wrapper-menu.open {
-    transform: rotate(-45deg);  
-    
-    }
-    
+    transform: rotate(-45deg);    
+    } 
     .line-menu {
       background-color: var(--text);
       border-radius: 5px;
       width: 100%;
       height: 3px;
-
-    }
-    
+    }  
     .line-menu.half {
     width: 50%;
     }
-    
     .line-menu.start {
     transition: transform 330ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
     transform-origin: right;
     }
-    
     .open .line-menu.start {
     transform: rotate(-90deg) translateX(3px);
     }
-    
     .line-menu.end {
     align-self: flex-end;
     transition: transform 330ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
     transform-origin: left;
     }
-    
     .open .line-menu.end {
     transform: rotate(-90deg) translateX(-3px);
     }
 }
-.backToTop{
+.backToTop{                         // back to top button
     width: min(2.5em, 50px);
     height: min(2.5em, 50px);
     background-color: var(--navbar-color);
@@ -336,7 +326,6 @@ body{
         cursor: pointer;
         path{
             fill: var(--accent-color);
-            
         }
     }
     svg{
@@ -347,7 +336,7 @@ body{
         }
     }
 }
-.dropdown-content{
+.dropdown-content{          // themes content
   width: 350px;
   height: 500px;
   top: 78px;
@@ -356,7 +345,7 @@ body{
   border-radius: 8px;
   box-shadow: 0px 0px 10px rgba(20, 20, 20, 0.7);
   overflow-y: scroll;
-  transition: 300ms right linear;
+  transition: 400ms right linear;
   right: -550px;
   z-index: 100;
   padding-bottom: 20px;
@@ -365,15 +354,14 @@ body{
   hr{
     display: none;
   }
-  .dropdown-items{
+  .dropdown-items{          // themes container
       display: grid;
       grid-template-columns: 150px 150px;
       column-gap: 10px;
       row-gap: 5px;
       justify-content: center;
       align-items: center;
-
-      .dropdown-item{
+      .dropdown-item{             // theme box
           margin: 0 auto;
           width: 100%;
           height: 180px;
@@ -461,7 +449,7 @@ body{
   
 }
 .show {
-  transition: 400ms right cubic-bezier(0.42, 0, 0.11, 1.32);
+  transition: 500ms right cubic-bezier(0.42, 0, 0.11, 1.32);
   right: 10px;
   z-index: 10;
 }
@@ -670,9 +658,9 @@ body{
 .snaps-inline {
   scroll-snap-type: inline mandatory;
   scroll-padding-inline: 1rem;
-}
-.snaps-inline > * {
-  scroll-snap-align: start;
+  *{
+    scroll-snap-align: start;
+  }
 }
 .horizontal-scroller{
     margin: 0 auto;
@@ -1236,7 +1224,6 @@ body{
           color: transparent !important;
           &:focus{
             outline: none;
-
           }
       }   
       .success {
@@ -1515,7 +1502,7 @@ body{
 ////////////////////////////////////////////////////////////////////////////////////
 ///////////////////////////////////// Media Screens ////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////
-@media screen and (max-width: 692px) {
+@media screen and (max-width: 692px) {                    // phone screen
   *{
     scroll-margin-top: 80px;
   }
@@ -1656,15 +1643,15 @@ body{
   }
   .dropdown-content{
     margin: 0 auto;
-    top: 2000px;
+    top: 100%;
     height: 500px;
     z-index: 100;
     right: 1em;
     left: 1em;
-    transition: 800ms all linear;
+    transition: 300ms all ease-in-out;
   }
   .show {
-    transition: 600ms top cubic-bezier(0.42, 0, 0.11, 1.32);
+    transition: 500ms top cubic-bezier(0.42, 0, 0.11, 1.32);
     top: calc(100% - 580px);
     z-index: 1000;
   }
@@ -1749,7 +1736,7 @@ body{
   opacity: 0;
   transition: 400ms all linear;
 }
-@media(min-width: 693px) and (max-width: 1152px){
+@media(min-width: 693px) and (max-width: 1152px){           // medium screen sizes
   .horizontal-scroller{
     margin: 0 auto;
     margin-left: 20px;
@@ -1849,7 +1836,7 @@ body{
     }
   }
 }
-@media screen and (max-height: 420px) and (min-width: 750px){
+@media screen and (max-height: 420px) and (min-width: 750px){             // fliped phone screen
   .navbar{
    height: 50px;
    top: 0;
@@ -2192,19 +2179,19 @@ body{
   0%{height:5px;}
   100%{height:25px;}
 }
+@keyframes rotate{
+  from{
+    transform: rotate(0deg);
+  }
+  to{
+    transform: rotate(360deg);
+  }
+}
 ///////////////////////////////////////////////////////////////////////////////////////////////////
 /////////////////////////////////////////////////////////// MUSIC PLAYER //////////////////////////
 ///////////////////////////////////////////////////////////////////////////////////////////////////
 
-  @keyframes rotate{
-    from{
-      transform: rotate(0deg);
-    }
-    to{
-      transform: rotate(360deg);
-    }
-  }
-  .wrapper{
+  .wrapper{                 // music player wrapper
     width: 350px;
     padding: 25px 30px;
     overflow: hidden;
@@ -2215,7 +2202,7 @@ body{
     *{
       transition: 300ms ease-in-out;
     }
-    &.minimalized{
+    &.minimalized{                //minimalized music player styling
       height: 80px;
       width: 80px;
       overflow: visible;
