--- a/style.scss
+++ b/style.scss
@@ -1172,6 +1172,9 @@ body{
             margin-top: 15px;
             margin-left: 15px;
           }
+          p{
+            margin-left: 15px;
+          }
           ul{
             list-style: none;
             margin-bottom: 15px;
