--- a/style.css
+++ b/style.css
@@ -29,6 +29,13 @@ body {
   transition: 200ms linear;
 }
 
+img, .material-icons, .navbar {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
 ::-moz-selection {
   color: var(--primary);
   background: var(--accent-color);
@@ -708,11 +715,28 @@ body {
   padding: 15px;
   border-radius: 8px;
   box-shadow: 0px 0px 10px var(--shadow-color);
-  -webkit-filter: grayscale(100%);
   background-color: var(--primary);
   position: relative;
   overflow: hidden;
   transition: 250ms linear;
+}
+.horizontal-scroller .skill.loading {
+  opacity: 0.3;
+  transition: 300ms linear;
+}
+.horizontal-scroller .skill.loading .img-loader {
+  opacity: 1;
+}
+.horizontal-scroller .skill .img-loader {
+  opacity: 0;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: var(--primary);
+  z-index: 10;
 }
 .horizontal-scroller .skill img {
   height: 300px;
@@ -720,6 +744,7 @@ body {
   inline-size: 100%;
   -o-object-fit: contain;
      object-fit: contain;
+  -webkit-filter: grayscale(100%);
 }
 .horizontal-scroller .skill .description {
   padding-top: 30px;
@@ -732,9 +757,9 @@ body {
   bottom: -200px;
   transition: 300ms linear;
 }
-.horizontal-scroller .skill:hover {
-  -webkit-filter: grayscale(0%);
+.horizontal-scroller .skill:hover img {
   transition: 250ms linear;
+  -webkit-filter: grayscale(0%);
 }
 .horizontal-scroller .skill:hover .description {
   bottom: 0;
@@ -1047,6 +1072,10 @@ body {
           text-orientation: mixed;
   opacity: 0.4;
   color: var(--accent-color);
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .contact-section {
