--- a/style.scss
+++ b/style.scss
@@ -26,6 +26,9 @@ body{
    background-color: var(--primary);
    transition: 200ms linear;
 }
+img, .material-icons, .navbar{
+  user-select: none;
+}
 ::selection {
   color: var(--primary);
   background: var(--accent-color);
@@ -675,13 +678,30 @@ body{
     overscroll-behavior-inline: contain;
     position: relative;
     .skill{
+      &.loading{
+        opacity: 0.3;
+        transition: 300ms linear;
+        .img-loader{
+          opacity: 1;
+        }
+      }
+      .img-loader{
+        opacity: 0;
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        background-color: var(--primary);
+        z-index: 10;
+      }
         display: grid;
         gap: 15px;
         margin-top: 15px;
         padding: 15px;
         border-radius: 8px;
         box-shadow: 0px 0px 10px var(--shadow-color);
-        -webkit-filter: grayscale(100%);
         background-color: var(--primary);
         position: relative;
         overflow: hidden;
@@ -691,6 +711,8 @@ body{
             margin: 0 auto;
             inline-size: 100%;
             object-fit: contain;
+        -webkit-filter: grayscale(100%);
+
         }
         .description{
             padding-top: 30px;
@@ -704,8 +726,10 @@ body{
             transition: 300ms linear;
         }
         &:hover{
-          -webkit-filter: grayscale(0%);
-          transition: 250ms linear;
+          img{
+            transition: 250ms linear;
+            -webkit-filter: grayscale(0%);
+          }
             .description{
                 bottom: 0;
                 transition: 300ms linear;
@@ -1062,6 +1086,7 @@ body{
     text-orientation: mixed;
     opacity: 0.4;
     color: var(--accent-color);
+    user-select: none;
   }
   padding: 20px 0 !important;
 }
