--- a/style.scss
+++ b/style.scss
@@ -1536,6 +1536,17 @@ img, .material-icons, .navbar{
   }
   .contact-section{
     margin-top: 100px;
+    form{
+      input{
+        height: 40px;
+      }
+      label{
+        margin: 10px 0px 0px 0px;
+      }
+      textarea{
+        height: 150px;
+      }
+    }
   }
   .background-text{
     font-size: 2.2rem !important;
@@ -1759,6 +1770,7 @@ img, .material-icons, .navbar{
     }
   }
 }
+
 .hide{
   right: -400px;
   opacity: 0;
