--- a/style.scss
+++ b/style.scss
@@ -813,7 +813,7 @@ img, .material-icons, .navbar{
         &:nth-child(2){
           .flip-card-front{
             .img{
-              background-image: url(https://picsum.photos/201);
+              background-image: url(./video_project.PNG);
             }
           }
         }
