two more projects in work section

--- a/style.css
+++ b/style.css
@@ -827,10 +827,10 @@ img, .material-icons, .navbar {
   background-image: url(./video_project.PNG);
 }
 .work-container .cards .card:nth-child(3) .flip-card-front .img {
-  background-image: url(https://picsum.photos/202);
+  background-image: url(./shoping-cart.PNG);
 }
 .work-container .cards .card:nth-child(4) .flip-card-front .img {
-  background-image: url(https://picsum.photos/300);
+  background-image: url(./react-dashboard.PNG);
 }
 .work-container .cards .card .flip-card-grid {
   position: relative;
