--- a/style.scss
+++ b/style.scss
@@ -820,14 +820,14 @@ img, .material-icons, .navbar{
         &:nth-child(3){
           .flip-card-front{
             .img{
-              background-image: url(https://picsum.photos/202);
+              background-image: url(./shoping-cart.PNG);
             }
           }
         }
         &:nth-child(4){
           .flip-card-front{
             .img{
-              background-image: url(https://picsum.photos/300);
+              background-image: url(./react-dashboard.PNG);
             }
           }
         }
