--- a/style.css
+++ b/style.css
@@ -832,6 +832,9 @@ img, .material-icons, .navbar {
 .work-container .cards .card:nth-child(4) .flip-card-front .img {
   background-image: url(./react-dashboard.PNG);
 }
+.work-container .cards .card:nth-child(5) .flip-card-front .img {
+  background-image: url(./react-portfolio.PNG);
+}
 .work-container .cards .card .flip-card-grid {
   position: relative;
   width: 100%;
