new project add

--- a/hangman-game/style.css
+++ b/hangman-game/style.css
@@ -66,5 +66,4 @@ body {
   border: 1px solid #ddd;
   border-radius: 8px;
   background-color: #222;
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
