--- a/music-player/music_player_style.css
+++ b/music-player/music_player_style.css
@@ -55,10 +55,10 @@
   margin-top: 15px;
   position: absolute;
   border-radius: 50%;
-  border: 1px solid #838383;
+  border: 1px solid rgb(131, 131, 131);
 }
 .wrapper.minimalized .img-area .dot {
-  border: 4px solid #838383;
+  border: 4px solid rgb(131, 131, 131);
   width: 15px;
   height: 15px;
   position: absolute;
@@ -158,7 +158,7 @@
 
 .top-bar i {
   font-size: 30px;
-  color: #a8a8a8;
+  color: rgb(168, 168, 168);
 }
 .top-bar i:first-child {
   margin-left: -7px;
@@ -166,7 +166,7 @@
 .top-bar span {
   font-size: 18px;
   margin-left: -3px;
-  color: #a8a8a8;
+  color: rgb(168, 168, 168);
 }
 
 .img-area {
@@ -204,7 +204,7 @@
   height: 6px;
   width: 100%;
   border-radius: 50px;
-  background: #a8a8a8;
+  background: rgb(168, 168, 168);
   cursor: pointer;
 }
 .progress-area .progress-bar {
@@ -212,7 +212,7 @@
   width: 0%;
   position: relative;
   border-radius: inherit;
-  background: #3a3a3a;
+  background: rgb(58, 58, 58);
 }
 .progress-area .progress-bar::before {
   content: "";
@@ -250,7 +250,7 @@
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  background: #a8a8a8;
+  background: rgb(168, 168, 168);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -279,10 +279,10 @@
   height: 43px;
   width: 43px;
   border-radius: inherit;
-  border: 1px solid #a8a8a8;
+  border: 1px solid rgb(168, 168, 168);
 }
 .controls .play-pause i {
-  background: #a8a8a8;
+  background: rgb(168, 168, 168);
   -webkit-background-clip: text;
           background-clip: text;
   position: absolute;
@@ -290,7 +290,7 @@
 
 .music-list {
   position: absolute;
-  background: #1e1e1e;
+  background: rgb(30, 30, 30);
   width: 100%;
   left: 0;
   bottom: -55%;
@@ -312,7 +312,7 @@
   display: flex;
   align-items: center;
   font-size: 19px;
-  color: #a8a8a8;
+  color: rgb(168, 168, 168);
 }
 .header .row i {
   cursor: default;
@@ -322,7 +322,7 @@
 }
 .header #close {
   font-size: 22px;
-  color: #a8a8a8;
+  color: rgb(168, 168, 168);
 }
 
 .music-list ul {
@@ -339,7 +339,7 @@
   cursor: pointer;
   padding-bottom: 10px;
   margin-bottom: 5px;
-  border-bottom: 1px solid #a8a8a8;
+  border-bottom: 1px solid rgb(168, 168, 168);
 }
 .music-list ul li:last-child {
   border-bottom: 0px;
@@ -359,5 +359,4 @@
 .music-list ul li.playing {
   pointer-events: none;
   color: var(--accent-color);
-}
-/*# sourceMappingURL=music_player_style.css.map */
+}/*# sourceMappingURL=music_player_style.css.map */
